--- a/app/views/06/location-18-plus.html
+++ b/app/views/06/location-18-plus.html
@@ -6,7 +6,7 @@
 
 
 {% block service %}
-<form action="search-results" method="post" novalidate>
+<form action="check-answers" method="post" novalidate>
 
   <h1 class="govuk-heading-l">
     Where do you want to study?
