--- a/app/views/06/location-adults-2.html
+++ b/app/views/06/location-adults-2.html
@@ -6,7 +6,7 @@
 
 
 {% block service %}
-<form action="check-answers" method="post" novalidate>
+<form action="jobs-adult-2" method="post" novalidate>
 
   <h1 class="govuk-heading-l">
     Where do you want to study
