--- a/app/views/06/what-adults.html
+++ b/app/views/06/what-adults.html
@@ -6,7 +6,7 @@
 
 
 {% block service %}
-<form action="job-subject-all" method="post" novalidate>
+<form action="job-subject-adult" method="post" novalidate>
 
   <div class="govuk-form-group">
     <fieldset class="govuk-fieldset" aria-describedby="study-location-hint">
@@ -25,13 +25,13 @@
         </div>
         <div class="govuk-radios__item">
           <input class="govuk-radios__input" id="search-adult-2" name="search-adult" type="radio" value="See all options in my location">
-          <label class="govuk-label govuk-radios__label" for="adult-adult-2">
+          <label class="govuk-label govuk-radios__label" for="search-adult-2">
             See all options in my location
           </label>
         </div>
         <div class="govuk-radios__item">
           <input class="govuk-radios__input" id="search-adult-3" name="search-adult" type="radio" value="Answer a couple of questions to get more personalised results">
-          <label class="govuk-label govuk-radios__label" for="adult-adult-3">
+          <label class="govuk-label govuk-radios__label" for="search-adult-3">
             Answer a couple of questions to get more personalised results
           </label>
         </div>
