--- a/app/views/index.html
+++ b/app/views/index.html
@@ -11,31 +11,57 @@
       Explore your options after school or college
     </h1>
 
-    <p>Private beta - July 2025 <a href="06/index">View prototype</a></p>
+    <h2 class="govuk-heading-m">
+      Current version
+    </h2>
 
-    <p>Final Alpha iterations based on in person UR feedback <a href="05/index">View prototype</a></p>
+    <p>Private beta - July 2025</p> <p><a href="06/index">View prototype</a></p>
 
-    <div class="govuk-inset-text">
-      <h2 class="govuk-heading-s">Help using the prototype</h2>
-      <p>After clicking 'start now', there are 2 options depending on which user journey you want to explore. Use the:</p>
-      
-      <ul>
-        <li>'find all courses nearby' option for the <strong>browse</strong> journey</li>
-        <li>'answer a few questions for more specific results' option for the search <strong>guided journey</strong></li>
-      </ul>
+    <h2 class="govuk-heading-m">
+      Previous versions
+    </h2>
 
-      <p>In the guided journey, enter 'business' into the 'jobs or careers' question to see business-related results. The first 2 results on the search results screen can be viewed.</p>
 
-      <p>You can also enter 'biology' to see biology and science-related results.</p>
+    <p>Final Alpha iterations based on in person UR feedback</p> 
+    
+    <details class="govuk-details">
+      <summary class="govuk-details__summary">
+        <span class="govuk-details__summary-text">
+          Help using the prototype
+        </span>
+      </summary>
+      <div class="govuk-details__text">
+        <h2 class="govuk-heading-s">Help using the prototype</h2>
+        <p>After clicking 'start now', there are 2 options depending on which user journey you want to explore. Use the:</p>
+        
+        <ul>
+          <li>'find all courses nearby' option for the <strong>browse</strong> journey</li>
+          <li>'answer a few questions for more specific results' option for the search <strong>guided journey</strong></li>
+        </ul>
+  
+        <p>In the guided journey, enter 'business' into the 'jobs or careers' question to see business-related results. The first 2 results on the search results screen can be viewed.</p>
+  
+        <p>You can also enter 'biology' to see biology and science-related results.</p>
+  
+        <p>Go directly to the screens showing an <a href="https://find-a-course-prototype-e5269d0a0fb0.herokuapp.com/05/search-results-few-results-biology">example of when there are few search results</a> and an <a href="https://find-a-course-prototype-e5269d0a0fb0.herokuapp.com/05/search-results-no-results-biology">example of when there are no search results</a>.</p>
+  
+        <p>Note that most external links, including those to provider websites, are not currently working.</p>      </div>
+    </details>
+    
+    <p> <a href="05/index">View prototype</a></p>
 
-      <p>Go directly to the screens showing an <a href="https://find-a-course-prototype-e5269d0a0fb0.herokuapp.com/05/search-results-few-results-biology">example of when there are few search results</a> and an <a href="https://find-a-course-prototype-e5269d0a0fb0.herokuapp.com/05/search-results-no-results-biology">example of when there are no search results</a>.</p>
 
-      <p>Note that most external links, including those to provider websites, are not currently working.</p>
-    </div>
+    <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
 
-    <p>Adding updated version of browse for in person UR sessions <a href="04/index">View prototype</a></p>
-    <p>Guided journey and browse for use in Userzoom sessions. <a href="03/guided-journey/index">View prototype</a></p>
-    <p>First attempt at recreating Figma designs. <a href="02/index">View prototype</a></p>
+    <p>Adding updated version of browse for in person UR sessions</p> <p> <a href="04/index">View prototype</a></p>
+
+    <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+
+    <p>Guided journey and browse for use in Userzoom sessions.</p> <p> <a href="03/guided-journey/index">View prototype</a></p>
+
+    <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+
+    <p>First attempt at recreating Figma designs.</p> <p> <a href="02/index">View prototype</a></p>
 
   </div>
 </div>
