--- a/app/views/06/courses.html
+++ b/app/views/06/courses.html
@@ -112,9 +112,9 @@
 
   <div class="govuk-grid-column-two-thirds">
 
-    
-
 <h1 class="govuk-heading-l">Available Courses</h1>
+
+<p><a href="clear-session-and-go">Search again</a> </p>
 
 {# Set a flag to detect if any visible filters are present #}
 {% set hasVisibleFilters = false %}
@@ -183,29 +183,24 @@
       {% endif %}
 
       {# Qualification level tags #}
-{% for level in selectedLevels %}
-  {% if levelLabels[level] %}
-    {% set queryString = "" %}
-    {# Keep all other selected levels except current one #}
-    {% for other in selectedLevels %}
-      {% if other != level %}
-        {% set queryString = queryString + "&qualification-level=" + other %}
+      {% for level in selectedLevels %}
+      {% if level != "_unchecked" %}
+        {% set label = {
+          "level-1-2": "Level 1 or 2",
+          "level-3": "Level 3",
+          "level-4-7": "Level 4 to "
+        }[level] %}
+    
+        {% if label %}
+          <a href="?{% for q in selectedQualifications %}&filter={{ q }}{% endfor %}&option-select-filter-location={{ selectedLocation }}&subject-filter={{ selectedSubject }}"
+            class="govuk-tag govuk-tag--yellow govuk-!-margin-right-1 govuk-!-margin-bottom-1"
+            aria-label="Remove level filter: {{ label }}">
+            {{ label }}
+          </a>
+        {% endif %}
       {% endif %}
     {% endfor %}
-    {# Re-include selected qualifications #}
-    {% for q in selectedQualifications %}
-      {% set queryString = queryString + "&filter=" + q %}
-    {% endfor %}
-    {# Re-include other filters #}
-    {% set queryString = queryString + "&option-select-filter-location=" + selectedLocation + "&subject-filter=" + selectedSubject %}
-
-    <a href="?page=1{{ queryString | safe }}"
-       class="govuk-tag govuk-tag--yellow govuk-!-margin-right-1 govuk-!-margin-bottom-1"
-       aria-label="Remove level filter: {{ levelLabels[level] }}">
-      {{ levelLabels[level] }}
-    </a>
-  {% endif %}
-{% endfor %}
+    
 
     </div>
 
