Added xgov filters

--- a/app/views/06/course-detail.html
+++ b/app/views/06/course-detail.html
@@ -42,7 +42,7 @@
         text: "Level"
       },
       value: {
-        html: "Level 3"
+        text: course.level
       }
     },
     {
@@ -50,7 +50,7 @@
         text: "Delivery method"
       },
       value: {
-        html: "In person"
+        text: course.delivery
       }
     }
   ]
@@ -112,7 +112,7 @@
         text: "Start date"
       },
       value: {
-        html: "8 September 2025"
+        text: course.start
       }
     },
     {
@@ -120,7 +120,7 @@
         text: "Duration"
       },
       value: {
-        html: "2 years"
+        text: course.duration
       }
     },
     {
@@ -128,7 +128,7 @@
         text: "Hours"
       },
       value: {
-        html: "Full time"
+        text: course.time
       }
     }
   ]
@@ -154,7 +154,7 @@
         text: "Cost"
       },
       value: {
-        html: "£1,200"
+        text: course.cost
       }
     }
   ]
