--- a/app/views/06/course-detail.html
+++ b/app/views/06/course-detail.html
@@ -169,7 +169,7 @@
       <h2 class="x-govuk-related-navigation__main-heading" id="related-navigation-related-content">Explore {{ course.provider }}</h2>
       <ul class="x-govuk-related-navigation__link-list">
         <li class="x-govuk-related-navigation__link">
-          <a class="govuk-link x-govuk-related-navigation__section-link x-govuk-related-navigation__section-link--other" href="/school-performance-tables">View all courses at {{ course.provider }}</a>
+          <a class="govuk-link x-govuk-related-navigation__section-link x-govuk-related-navigation__section-link--other" href="">View all courses at {{ course.provider }}</a>
         </li>
       </ul>
       <nav class="x-govuk-related-navigation__nav-section" aria-labelledby="related-navigation-explore-the-topic">
