--- a/app/views/06/level-adult.html
+++ b/app/views/06/level-adult.html
@@ -57,7 +57,7 @@
     </fieldset>
   </div>
   
-  <p><a href="">What qualification levels mean</a></p>
+  <p><a href="https://www.gov.uk/what-different-qualification-levels-mean/list-of-qualification-levels" target="_blank">What qualification levels mean (opens in new tab)</a></p>
 
     
     <div class="govuk-button-group">
