--- a/app/views/06/jobs-adult-2.html
+++ b/app/views/06/jobs-adult-2.html
@@ -8,7 +8,7 @@
 {% block service %}
 
   <div data-module="moj-add-another">
-    <form action="level-adult" method="post" novalidate>
+    <form action="check-answers" method="post" novalidate>
 
       <h1 class="govuk-heading-l">What courses, subjects, jobs or careers are you interested in?</h1>
 
