Added additional content about different course types

--- a/app/views/06/courses.html
+++ b/app/views/06/courses.html
@@ -484,7 +484,8 @@
       ]
     },
     {
-      width: "one-third",
+      title: "Additional views",
+      width: "full",
       items: [
         {
           href: "search-results-no-results",
