--- a/app/views/06/check-answers.html
+++ b/app/views/06/check-answers.html
@@ -17,7 +17,15 @@
       Age
     </dt>
     <dd class="govuk-summary-list__value">
-     {{ data['age'] }}
+      {% if data['age'] == 'under-18' %}
+      Younger than 18
+    {% elseif data['age'] == '18-21' %}
+      Between 18 and 24 years old
+    {% elseif data['age'] == 'over-24' %}
+      Over 24
+    {% else %}
+      Not provided
+    {% endif %}
     </dd>
     <dd class="govuk-summary-list__actions">
       <a class="govuk-link" href="location">Change<span class="govuk-visually-hidden"> date of birth</span></a>
@@ -29,7 +37,15 @@
       What you want to do
     </dt>
     <dd class="govuk-summary-list__value">
-     {{ data['next-step'] }}
+      {% if data['next-step'] == 'gcses' %}
+      Explore options after your GCSEs
+    {% elseif data['next-step'] == 'university' %}
+    Find university or other higher education options
+    {% elseif data['next-step'] == 'return' %}
+    Return to education or training, after a break or whilst working
+    {% else %}
+      Not provided
+    {% endif %}
     </dd>
     <dd class="govuk-summary-list__actions">
       <a class="govuk-link" href="location">Change<span class="govuk-visually-hidden"> date of birth</span></a>
@@ -130,7 +146,19 @@
       Level you're looking for
     </dt>
     <dd class="govuk-summary-list__value">
-      <p>{{ data['qualification-level'] }}</p> 
+      {% if data['qualification-level'] == 'none' %}
+      Learn skills and experience without a qualification
+    {% elseif data['next-step'] == 'level-1-2' %}
+    Level 1 or 2 (like GCSEs)
+    {% elseif data['next-step'] == 'level-3' %}
+    Level 3 (like BTECs and A levels)
+    {% elseif data['next-step'] == 'level-4-7' %}
+    Level 4 to 7 (like diplomas and degrees)
+    {% elseif data['next-step'] == 'all' %}
+    Show me everything
+    {% else %}
+      Not provided
+    {% endif %}
     </dd>
     <dd class="govuk-summary-list__actions">
       <a class="govuk-link" href="level-adult">Change<span class="govuk-visually-hidden"> address</span></a>
