--- a/app/views/06/courses.html
+++ b/app/views/06/courses.html
@@ -490,6 +490,10 @@
         {
           href: "search-results-no-results",
           text: "No results"
+        },
+        {
+          href: "courses-quirky",
+          text: "Quirky results"
         }
       ]
     }
