--- a/app/views/06/courses.html
+++ b/app/views/06/courses.html
@@ -77,9 +77,9 @@
         <div class="govuk-checkboxes govuk-checkboxes--small">
           {% for level in ["level-1-2", "level-3", "level-4-7"] %}
             {% set label = {
-              "level-1-2": "Level 1 or 2",
-              "level-3": "Level 3",
-              "level-4-7": "Level 4 to 7"
+              "level-1-2": "Level 1 or 2 (like GCSEs)",
+              "level-3": "Level 3 (like BTECs and A levels)",
+              "level-4-7": "Level 4 to 7 (like diplomas and degrees)"
             }[level] %}
             <div class="govuk-checkboxes__item">
               <input class="govuk-checkboxes__input"
@@ -493,7 +493,11 @@
         },
         {
           href: "courses-quirky",
-          text: "Quirky results"
+          text: "Quirky results - you might be interested in..."
+        },
+        {
+          href: "courses-quirky-2",
+          text: "Quirky results - History with English result"
         }
       ]
     }
