Updated level filters

--- a/app/views/06/courses.html
+++ b/app/views/06/courses.html
@@ -132,9 +132,9 @@
 {% endif %}
 
 {% set levelLabels = {
-  "level-1-2": "Level 1 or 2",
-  "level-3": "Level 3",
-  "level-4-7": "Level 4 to 7"
+  "level-1-2": "Level 1 or 2 (like GCSEs)",
+  "level-3": "Level 3 (like BTECs and A levels)",
+  "level-4-7": "Level 4 to 7 (like diplomas and degrees)"
 } %}
 
 
