--- a/app/views/06/courses-quirky-2.html
+++ b/app/views/06/courses-quirky-2.html
@@ -91,28 +91,28 @@
         <div class="govuk-checkboxes govuk-checkboxes--small">
           
             
-            <div class="govuk-checkboxes__item">
-              <input class="govuk-checkboxes__input" id="qualification-level-level-1-2" name="qualification-level" type="checkbox" value="level-1-2">
-              <label class="govuk-label govuk-checkboxes__label" for="qualification-level-level-1-2">
-                Level 1 or 2
-              </label>
-            </div>
+          <div class="govuk-checkboxes__item">
+            <input class="govuk-checkboxes__input" id="qualification-level-level-1-2" name="qualification-level" type="checkbox" value="level-1-2">
+            <label class="govuk-label govuk-checkboxes__label" for="qualification-level-level-1-2">
+              Level 1 or 2 (like GCSEs)
+            </label>
+          </div>
+        
           
-            
-            <div class="govuk-checkboxes__item">
-              <input class="govuk-checkboxes__input" id="qualification-level-level-3" name="qualification-level" type="checkbox" value="level-3">
-              <label class="govuk-label govuk-checkboxes__label" for="qualification-level-level-3">
-                Level 3
-              </label>
-            </div>
+          <div class="govuk-checkboxes__item">
+            <input class="govuk-checkboxes__input" id="qualification-level-level-3" name="qualification-level" type="checkbox" value="level-3">
+            <label class="govuk-label govuk-checkboxes__label" for="qualification-level-level-3">
+              Level 3 (like BTECs and A levels)
+            </label>
+          </div>
+        
           
-            
-            <div class="govuk-checkboxes__item">
-              <input class="govuk-checkboxes__input" id="qualification-level-level-4-7" name="qualification-level" type="checkbox" value="level-4-7">
-              <label class="govuk-label govuk-checkboxes__label" for="qualification-level-level-4-7">
-                Level 4 to 7
-              </label>
-            </div>
+          <div class="govuk-checkboxes__item">
+            <input class="govuk-checkboxes__input" id="qualification-level-level-4-7" name="qualification-level" type="checkbox" value="level-4-7">
+            <label class="govuk-label govuk-checkboxes__label" for="qualification-level-level-4-7">
+              Level 4 to 7 (like diplomas and degrees)
+            </label>
+          </div>
           
         </div>
       </fieldset>
