--- a/app/views/06/courses-quirky.html
+++ b/app/views/06/courses-quirky.html
@@ -94,7 +94,7 @@
             <div class="govuk-checkboxes__item">
               <input class="govuk-checkboxes__input" id="qualification-level-level-1-2" name="qualification-level" type="checkbox" value="level-1-2">
               <label class="govuk-label govuk-checkboxes__label" for="qualification-level-level-1-2">
-                Level 1 or 2
+                Level 1 or 2 (like GCSEs)
               </label>
             </div>
           
@@ -102,7 +102,7 @@
             <div class="govuk-checkboxes__item">
               <input class="govuk-checkboxes__input" id="qualification-level-level-3" name="qualification-level" type="checkbox" value="level-3">
               <label class="govuk-label govuk-checkboxes__label" for="qualification-level-level-3">
-                Level 3
+                Level 3 (like BTECs and A levels)
               </label>
             </div>
           
@@ -110,7 +110,7 @@
             <div class="govuk-checkboxes__item">
               <input class="govuk-checkboxes__input" id="qualification-level-level-4-7" name="qualification-level" type="checkbox" value="level-4-7">
               <label class="govuk-label govuk-checkboxes__label" for="qualification-level-level-4-7">
-                Level 4 to 7
+                Level 4 to 7 (like diplomas and degrees)
               </label>
             </div>
           
