Added v7 - simplified journey

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -15,13 +15,15 @@
       Current version
     </h2>
 
-    <p>Private beta - July 2025</p> <p><a href="06/index">View prototype</a></p>
+    <p>Simplified journey - September 2025</p> <p><a href="07/index">View prototype</a></p>
 
     <h2 class="govuk-heading-m">
       Previous versions
     </h2>
 
+    <p>Private beta - July 2025</p> <p><a href="06/index">View prototype</a></p>
 
+    <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
     <p>Final Alpha iterations based on in person UR feedback</p> 
     
     <details class="govuk-details">
