--- a/app/views/07/courses.html
+++ b/app/views/07/courses.html
@@ -161,6 +161,18 @@ Show filters
 
 <p><a href="clear-session-and-go">Search again</a> </p>
 
+<p class="govuk-body govuk-!-margin-bottom-6">
+  <span class="govuk-!-font-weight-bold">Sort courses by:</span> 
+<span class="govuk-!-margin-left-1 govuk-!-margin-right-1">
+  
+<span class="">Distance</span>
+</span>    
+ | 
+<span class="govuk-!-margin-left-2 govuk-!-margin-right-1">
+    <a href="/records?sortOrder=lastName" class="govuk-link govuk-link--no-visited-state">Start date</a>
+</span>
+</p>
+
 
 
 
