--- a/app/views/07/level.html
+++ b/app/views/07/level.html
@@ -32,19 +32,19 @@
       items: [
         {
           value: "none",
-          text: "Learn skills and experience without gaining a qualification",
+          text: "Learn skills and experience without gaining a qualification"
         },
         {
           value: "level-1-2",
-          text: "Level 1 or 2 (like GCSEs)",
+          text: "Level 1 or 2 (like GCSEs)"
         },
         {
           value: "level-3",
-          text: "Level 3 (like BTECs and A levels)",
+          text: "Level 3 (like BTECs and A levels)"
         },
         {
           value: "level-4-7",
-          text: "Level 4 to 7 (like diplomas and degrees)",
+          text: "Level 4 to 7 (like diplomas and degrees)"
         }
       ]
     }) }}
